--- a/index.html
+++ b/index.html
@@ -187,19 +187,19 @@
 				
 				<div class="container-fluid">
 					<div class="row justify-content-center">
-						<!-- <div class="col-6">
+						<div class="col-5">
 							<h3 class="py-3 text-center">Visit Me</h3>
-							<div>
-								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14218.21870921665!2d120.98468799233625!3d14.585289890711064!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c9861e670d79%3A0xe8bf3fa01b421dc9!2sPaco%2C%20Manila%2C%20Metro%20Manila!5e1!3m2!1sen!2sph!4v1698319164505!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-							</div> -->
+							<div class="iframe">
+								<iframe class="responsive-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14218.21870921665!2d120.98468799233625!3d14.585289890711064!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c9861e670d79%3A0xe8bf3fa01b421dc9!2sPaco%2C%20Manila%2C%20Metro%20Manila!5e1!3m2!1sen!2sph!4v1698319164505!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+							</div>
 							
 						</div>
 
-						<div class="col-6">
+						<div class="col-5">
 							<h3 class="py-3 text-center">Message Me</h3>
 							<div class="row d-flex justify-content-center">
-								<div class="col-# bg-secondary rounded p-3">
-									<form>
+								<!-- <div class="col"> -->
+									<form class="p-3">
 										<div>
 											<label for="fullName" class="form-label">Full Name:</label>
 											<input type="text" name="fullName" class="form-control" id="fullName">
